[package]
name = "wretch"
version = "0.1.0"
authors = ["Govind Gnanakumar <govind.gnanakumar@outlook.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/sandkoan/wretch/"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.19"